--- a/01 - QR Code Component/CSS/style.css
+++ b/01 - QR Code Component/CSS/style.css
@@ -23,30 +23,34 @@ body {
 }
 
 .container {
-    width: 19rem;
+    max-width: 16rem;
     background-color: var(--White);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
-    padding-top: 1rem;
-    border-radius: 2rem;
+    padding: 0.8rem 0.8rem 2.2rem 0.8rem;
+    border-radius: 1.2rem;
+    gap: 1.6rem;
 
 }
+
+.text {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+
 .image {
-    width: 18rem;
-    height: 19rem;
-    max-width: 17rem;
-    border-radius: 2rem;
-    margin-bottom: 1rem;
+    display: block;
+    max-width: 100%;
+    border-radius: 1.2rem;
 }
 
 .heading {
     text-align: center;
     font-family: var(--Outfit-Regular);
     font-weight: 700;
-    margin-bottom: 1rem;
 }
 
 .para {
@@ -57,15 +61,9 @@ body {
     color: var(--Grayish-Blue);
 }
 
-.text {
-    margin-inline: 1rem;
-    padding: 0.5rem;
-    width: 90%;
-    margin-bottom: 2rem;
-}
 
-@media (max-width: 500px) {
-    .container {
-        width:70%;;
+@media (max-width: 23em) {
+    html {
+        font-size: 12px;
     }
 }
