--- a/07 - Interactive Rating Component/CSS/general.css
+++ b/07 - Interactive Rating Component/CSS/general.css
@@ -1,3 +1,14 @@
+.container {
+    max-width: 25rem;
+    background: linear-gradient(to bottom right, hsla(213, 20%, 18%, 0.868),hsla(213, 12%, 14%, 0.996));
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1.5rem 2rem;
+    border-radius: 1.5rem;
+    height: 27rem;
+}
+
 .primary-heading, .secondary-heading {
     color: var(--white);
     font-size: var(--fontSize32);
@@ -11,4 +22,24 @@
 
 .secondary-heading {
     font-size: var(--fontSize24);
+}
+
+.btn {
+    background-color: var(--orange);
+    color: var(--white);
+    border: none;
+    padding: 0.75rem 1.5rem;
+    border-radius: 1.5rem;
+    text-transform: uppercase;
+    transition: all 0.3s ease-in-out;
+    letter-spacing: 2px;
+    font-weight: 700;
+    font-family: inherit;
+    cursor: pointer;
+    width: 100%;
+}
+
+.btn:hover {
+    background-color: var(--white);
+    color: var(--orange);
 }
