--- a/07 - Interactive Rating Component/CSS/general.css
+++ b/07 - Interactive Rating Component/CSS/general.css
@@ -7,6 +7,7 @@
     padding: 1.5rem 2rem;
     border-radius: 1.5rem;
     height: 27rem;
+    position: relative;
 }
 
 .primary-heading, .secondary-heading {
