--- a/07 - Interactive Rating Component/CSS/style.css
+++ b/07 - Interactive Rating Component/CSS/style.css
@@ -1,7 +1,3 @@
-/* Spacing-System (in pixels) ->  2px / 4px / 8px / 12px / 16px / 24px / 32px /    64px / 80px / 96px / 128px */
-/* Font sizes (in pixels) -> 10px / 12px / 14px / 16px / 18px / 20px / 24px / 30px / 36px / 44px / 52px / 62px / 74px / 86px /  */
-
-
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
 
 :root {
@@ -56,10 +52,6 @@ body {
     background-color: hsl(216, 12%, 54%, 0.1);
 }
 
-.logo-container img {
-    display: block;
-    max-width: 100%;
-}
 
 .text {
     color: var(--lightGrey);
@@ -70,6 +62,18 @@ body {
 .ratings-container {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.no-rating {
+    text-align: center;
+    font-size: var(--fontSize14);
+    color: red;
+    opacity: 0;
+    position: absolute;
+    bottom: 18%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .rating {
