--- a/08 - Notifications Page/CSS/style.css
+++ b/08 - Notifications Page/CSS/style.css
@@ -4,12 +4,22 @@
     /* Colours */
     --red: hsl(1, 90%, 64%);
     --blue: hsl(219, 85%, 26%);
+    --hoverBlue: hsl(219, 74%, 36%);
     --white: hsl(0, 0%, 100%);
     --very-light-grayish-blue: hsl(210, 60%, 98%);
     --light-grayish-blue-1: hsl(211, 68%, 94%);
     --light-grayish-blue-2: hsl(205, 33%, 90%);
-    --grayish-blue: hsl(219, 14%, 63%) --dark-grayish-blue: hsl(219, 12%, 42%);
+    --grayish-blue: hsl(219, 14%, 63%) ;
+    --dark-grayish-blue: hsl(219, 12%, 42%);
     --very-dark-blue: hsl(224, 21%, 14%);
+
+
+    /* Dark Mode Colors */
+    --lightBlue: #15aabf;
+    --darkModeBackground: #212121;
+    --containerDarkBackground: linear-gradient(to right, #434343 0%, rgba(0, 0, 0, 0.85) 100%);
+    --darkModeTextColor: #adb5bd;
+    --darkModeGroupMessage: #1098ad;
 
     /* Typography */
     --plus-jakarta-sans: 'Plus Jakarta Sans', sans-serif;
@@ -17,9 +27,12 @@
     --font-weight-bold: 700;
     --font-size-12: 0.75rem;
     --font-size-14: 0.875rem;
+    --font-size-15: 0.9375rem;
     --font-size-16: 1rem;
+    --font-size-17: 1.0625rem;
     --font-size-18: 1.125rem;
     --font-size-20: 1.25rem;
+    --font-size-22: 1.375rem;
     --font-size-24: 1.5rem;
     --font-size-32: 2rem;
     --font-size-48: 3rem;
@@ -39,13 +52,15 @@ body {
     align-items: center;
     font-family: var(--plus-jakarta-sans);
     background-color: var(--very-light-grayish-blue);
+    font-size: var(--font-size-16);
 }
 
 .container {
     background-color: var(--white);
     border-radius: 1rem;
-    padding: 1.5rem 2rem;
-    max-width: 60rem;
+    padding: 1.75rem 2rem;
+    max-width: 48rem;
+    position: relative;
 }
 
 /* Notification Header */
@@ -61,40 +76,223 @@ body {
     font-weight: 800;
 }
 
-.number {
+.number-of-notifications {
     background-color: var(--blue);
     color: var(--white);
     font-weight: 800;
     font-size: var(--font-size-20);
     padding: 0.25rem 0.75rem;
     border-radius: 0.5rem;
+    width: 2.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mark-as-read {
     margin-left: auto;
+    border: none;
+    background: transparent;
+    font-family: inherit;
+    color: var(--dark-grayish-blue);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: var(--font-size-18);
 }
 
 /* Notifications */
 .notifications {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.5rem;
 }
 
 .notification {
     display: flex;
+    padding: 1rem 1.5rem;
+    gap: 1.25rem;
 }
 
+/* Photos */
+
 .profile-container img {
-    max-width: 60%;
+    width: 100%;
+    object-fit: cover;
     display: block;
+    height: 3rem;
+    width: 3rem;
+}
+
+.user-photo-container {
+    margin-left: auto;
 }
 
 .user-photo-container img {
-    max-width: 60%;
+    height: 3rem;
+    width: 3rem;
     display: block;
+   
 }
 
-.light-blue-background {
+/* Messages */
+.message-text {
+   margin-bottom: 0.5rem;
+   color: var(--dark-grayish-blue);
+   font-weight: 500;
+}
+
+.user-name {
+    font-size: var(--fontSize17);
+    text-decoration: none;
+    font-weight: 800;
+    margin-right: 0.25rem;
+    color: black;
+    transition: all 0.3s ease;
+}
+
+
+.recent-post-heading { 
+    color: var(--dark-grayish-blue);
+    text-decoration: none;
+    font-weight: 700;
+    margin-left: 0.25rem;
+    font-size: var(--font-size-17);
+    transition: all 0.3s ease;
+}
+
+.group-message {
+    color: var(--blue);
+    text-decoration: none;
+    font-weight: 800;
+    margin-left: 0.2rem;
+    font-size: var(--font-size-17);
+    transition: all 0.3s ease;
+}
+
+.user-name:hover,
+.recent-post-heading:hover,
+.group-message:hover,
+.mark-as-read:hover {
+    color: var(--hoverBlue);
+}
+
+.unread-icon {
+    display: inline-block;
+    margin-left: 0.5rem;
+    height: 0.6rem;
+    width: 0.6rem;
+    background-color: var(--red);
+    border-radius: 50%;
+}
+
+.time {
+    color: var(--grayish-blue);
+}
+
+.private-message-container {
+    padding: 1.5rem;
+    margin-top: 0.75rem;
+    border-radius: 0.5em;
+    border: 1px solid var(--grayish-blue);
+    color: var(--dark-grayish-blue);
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.private-message-container:hover {
     background-color: var(--light-grayish-blue-1);
 }
+
+
+.unread-background {
+    background-color: var(--very-light-grayish-blue);
+    transition: all 0.3s ease;
+    border-radius: 0.5rem;
+}
+
+ .no-unread-message .unread-icon {
+    display: none;
+    transition: all 0.3s ease;
+ }
+
+
+
+ 
+
+
+ @media (max-width: 40em) {
+    .container {
+        padding: 1.75rem 1.25rem;;
+    }
+
+    .primary-heading {
+        font-size: var(--font-size-24);
+    }
+
+    .number-of-notifications {
+        font-size: var(--font-size-18);
+    }
+
+    .mark-as-read {
+        font-size: var(--font-size-16);
+    }
+
+    .private-message-container {
+        font-size: var(--font-size-15);
+        padding: 1rem;
+    }
+
+    .message-text {
+        font-size: var(--font-size-15);
+    }
+
+    .user-name,
+    .recent-post-heading,
+    .group-message {
+        font-size: var(--font-size-16);
+    }
+
+ }
+
+ @media (max-width: 27em) {
+    .container {
+        padding: 1.75rem 0.75rem;;
+    }
+    
+    .primary-heading {
+        font-size: var(--font-size-20);
+    }
+
+    .number-of-notifications {
+        font-size: var(--font-size-15);
+        padding: 0.2rem 0.5rem;
+    }
+
+    .icons {
+        font-size: 0.95rem !important;
+    }
+
+    .notification-header {
+        gap: 0.5rem;
+    }
+
+    .mark-as-read {
+        font-size: var(--font-size-14);
+    }
+
+    .notification {
+        padding: 1rem;
+    }
+
+    .message-text {
+        font-size: var(--font-size-14);
+    }
+
+    .user-name,
+    .recent-post-heading,
+    .group-message {
+        font-size: var(--font-size-15);
+    }
+
+ }
+
