--- a/08 - Notifications Page/CSS/dark-mode-style.css
+++ b/08 - Notifications Page/CSS/dark-mode-style.css
@@ -5,18 +5,21 @@
     position: absolute;
     right: 2rem;
     top: 0.75rem;
+    cursor: pointer;
 }
 
 .light-mode-icon {
     display: none;
+    transition: all 0.3s ease;
 }
 
 .dark-mode .dark-mode-icon {
     display: none;
+    transition: all 0.3s ease;
 }
 
 .dark-mode-icon:hover {
-    color: rgb(107, 19, 107);
+    color: lightseagreen;
 }
 
 .dark-mode .light-mode-icon {
