--- a/11 - Sunnyside Agency Landing Page/CSS/style.css
+++ b/11 - Sunnyside Agency Landing Page/CSS/style.css
@@ -49,6 +49,10 @@ img {
     max-width: 100%;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: var(--barlow);
     font-size: var(--font-size-18);
@@ -330,7 +334,7 @@ footer a {
 .footer-container {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     justify-content: center;
     align-items: center;
 }
@@ -338,7 +342,7 @@ footer a {
 .footer-nav-list {
     list-style: none;
     display: flex;
-    gap: 2.25rem;
+    gap: 3rem;
 
 }
 
