--- a/05 - Easy Bank Landing Page/CSS/queries.css
+++ b/05 - Easy Bank Landing Page/CSS/queries.css
@@ -76,7 +76,7 @@
     }
 
     .hero {
-        gap: 0rem;
+        gap: 0;
     }
     
     .hero-image {
@@ -89,7 +89,6 @@
     .heading-primary {
         font-size: 3.8rem !important;
     }
-
 
 }
 
@@ -153,14 +152,13 @@
 
     .main-nav {
         position: absolute;
-        width: 80%;
-        height: 45vh;
-        top: 10rem;
-        left: 10%;
-        right: 50%;
+        width: 60%;
+        height: 50vh;
+        top: 12rem;
+        left: 50%;
+        transform: translateX(-50%);
         margin: 0 auto;
         background-color: rgba(255, 255, 255);
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         border-radius: 1.6rem;
         display: flex;
         justify-content: center;
@@ -190,6 +188,15 @@
         display: none;
     }
 
+    .main-nav-link::before {
+        content: '';
+        width: 0;
+        border-bottom: none;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+
 
     .main-nav-link {
         padding-bottom: 0;
@@ -205,7 +212,6 @@
         flex-direction: column;
         gap: 4.8rem;
     }
-
 
 
     .article-grid {
@@ -335,6 +341,6 @@
         display: none;
     }
     .main-cta {
-        padding: 1.2 0.8rem;
+        padding: 1.2rem 0.8rem;
     }
 }
