--- a/11 - Sunnyside Agency Landing Page/CSS/style.css
+++ b/11 - Sunnyside Agency Landing Page/CSS/style.css
@@ -20,6 +20,7 @@
     --font-size-28: 1.75rem;
     --font-size-32: 2rem;
     --font-size-36: 2.25rem;
+    --font-size-40: 2.5rem;
     --font-size-48: 3rem;
     --font-size-64: 4rem;
     --font-size-80: 5rem;
@@ -57,6 +58,7 @@ body {
     font-family: var(--barlow);
     font-size: var(--font-size-18);
     color: var(--very-dark-desaturated-blue);
+    position: relative;
 }
 
 /**************************/
@@ -139,11 +141,61 @@ header {
     border-color: var(--white);
 }
 
+.open-btn,
+.close-btn {
+    border: none;
+    display: inline-block;
+    background: transparent;
+    color: var(--white);
+    font-size: var(--font-size-32);
+    position: relative;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.close-btn {
+    display: none;
+}
+
+.mobile-navigation {
+    display: none;
+}
+
 .down-arrow-container {
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
+    animation: arrow-animation infinite 1.5s linear;
+}
+
+@keyframes arrow-animation {
+    0% {
+        transform: translateY(0%);
+    }
+
+    50% {
+        transform: translateY(20%);
+    }
+
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+
+
+
+
+.overlay.hidden {
+    display: none;
+}
+
+.overlay {
+    position: absolute;
+    display: block;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.35);
 }
 
 /**************************/
@@ -170,6 +222,7 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 42rem;
 }
 
 .image-container.egg-image {
@@ -217,6 +270,7 @@ header {
     display: flex;
     flex-direction: column;
     padding: 3rem 10rem;
+    min-height: 42rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
@@ -247,7 +301,7 @@ header {
 }
 
 .testimonials {
-    gap: 2.25rem;
+    gap: 2.5rem;
 }
 
 .testimonial-heading {
@@ -289,8 +343,8 @@ header {
 /************************/
 /* Gallery - Section */
 /************************/
-.image-gallery {
-    height: 40rem;
+.image-gallery .image-container  {
+   min-height: 32rem;
 }
 
 .image-gallery .image-container:nth-child(1) {
