--- a/12 - Rock Paper Scissors/CSS/style.css
+++ b/12 - Rock Paper Scissors/CSS/style.css
@@ -46,7 +46,9 @@ body {
     font-family: var(--barlow-semi-condensed);
 }
 
-/* Header Styling */
+/****************/
+/* Header */
+/****************/
 .header {
     display: flex;
     padding: 3rem 3rem;
@@ -86,18 +88,73 @@ body {
     font-weight: 700;
 }
 
-/*Game Section*/
+/****************/
+/* Difficulty Section */
+/****************/
+.difficulty-container {
+    margin: 0 auto;
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+    align-items: center;
+}
 
-.game-section {
+.difficulty-text {
+    color: var(--white);
+    font-size: var(--fontSize32);
+    font-weight: var(--fontWeightMedium);
+}
+
+.difficulty-buttons {
+    display: flex;
+    gap: 1.75rem;
+}
+
+.difficulty-button {
+    font-family: inherit;
+    height: 2.25rem;
+    width: 2.25rem;
+    font-size: var(--fontSize16);
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--white);
+    border: 2px solid var(--white);
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.difficulty-button:hover {
+    background-color: rgba(255, 255, 255, 0.6);
+    color: var(--radial-gradient);
+    border-color: transparent;
+}
+
+.difficulty-button.current-active {
+    background-color: var(--white);
+    color: var(--radial-gradient);
+    border-color: transparent;
+}
+
+
+/****************/
+/* Game Section */
+/****************/
+.original-game-section {
     padding: 6rem 0;
     display: block;
 }
 
-.game-finished .game-section {
+.difficulty-hard .original-game-section {
     display: none;
 }
 
-.container {
+.game-finished .original-game-section {
+    display: none;
+}
+
+.original-game-container {
     max-width: 30rem;
     margin: 0 auto;
     padding: 1rem 0;
@@ -150,23 +207,35 @@ body {
 
 .scissors-container {
     background: var(--scissors-gradient);
-    grid-column-start: 3;
+
 }
 
 .rock-container {
     background: var(--rock-gradient);
+}
+
+.original-game-container .scissors-container {
+    grid-column-start: 3;
+}
+
+.original-game-container .rock-container {
     grid-column-start: 2;
 }
 
+/************************/
 /* Result Screen styling*/
-
-.result-screen {
+/************************/
+.result-screen-original {
     display: none;
     padding: 6rem 0;
 }
 
-.game-finished .result-screen {
+.game-finished .result-screen-original {
     display: block;
+}
+
+.difficulty-hard.game-finished .result-screen-original {
+    display: none;
 }
 
 .result-container {
@@ -220,9 +289,9 @@ body {
     color: var(--white);
 }
 
-
+/**************************/
 /* Rules - section styling*/
-
+/**************************/
 .rules-button {
     font-family: inherit;
     background-color: transparent;
@@ -289,3 +358,67 @@ body {
     opacity: 0.5;
 }
 
+/**************************/
+/* Media - section styling*/
+/**************************/
+
+@media (max-width: 50em) {
+    .header-container {
+        gap: 10rem;
+    }
+}
+
+@media (max-width: 37.5em) {
+    .header {
+        padding: 2rem 1rem;
+    }
+
+    .header-container {
+        gap: 3rem;
+    }
+
+    .original-game-section {
+        padding: 3rem 0;
+    }
+
+    .logo-container {
+        width: 7.25rem;
+        height: 7.25rem;
+    }
+
+    .logo-container::before {
+        width: 5.25rem;
+        height: 5.25rem;
+    }
+
+    .result-container {
+        grid-template-columns: 1fr 1fr;
+        row-gap: 3rem;
+    }
+
+    .result-box {
+        grid-row-start: 2;
+        grid-column: span 2;
+    }
+
+    .rules-button {
+        left: 50%;
+        transform: translateX(-50%);
+        width: 6rem;
+    }
+
+    .rules-content {
+        inset: 0;
+        transform: translate(0, 0);
+        width: 100%;
+        height: 100%;
+    }
+
+    .rules-image-box img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 0;
+    }
+}
