--- a/13 - Space Tourism Website/CSS/utility-classes.css
+++ b/13 - Space Tourism Website/CSS/utility-classes.css
@@ -8,9 +8,9 @@
     gap: var(--gap)
 }
 
-.flow > * + * {
-    margin-top: 1rem;
-
+.flow > *:where(:not(:first-child)) {
+    margin-top: var(--flow-space, 1rem);
+    outline: 1px solid red;
 }
 
 .container {
@@ -18,6 +18,8 @@
     margin-inline: auto;
     max-width: 80rem;
 }
+
+
 
 /* Colors */
 .background-dark {
@@ -122,6 +124,36 @@
 .numbered-title span {
     margin-right: .5em;
     font-weight: 700;
-
-
+    color: hsl(var(--clr-white) / 0.25);
 }
+
+/* Components */
+.large-button {
+    position: relative;
+    display: inline-grid;
+    z-index: 1;
+    place-items: center;
+    text-decoration: none;
+    padding: 0 2em;
+    aspect-ratio: 1;
+    border-radius: 50%;
+}
+
+.large-button::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: hsl(var(--clr-white) / 0.15  );
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+.large-button:hover::after,
+.large-button:focus::after{
+   transform: scale(1.5);
+    opacity: 1;
+}
+
