--- a/13 - Space Tourism Website/CSS/index.css
+++ b/13 - Space Tourism Website/CSS/index.css
@@ -17,19 +17,40 @@
     --font-family-barlow: 'Barlow', serif;
 
     /* Font-sizes*/
-    --font-size-900: 9.375rem;
-    --font-size-800: 6.25rem;
+    --font-size-900: 5rem;
+    --font-size-800: 3.5rem;
     --font-size-700: 3.5rem;
-    --font-size-600: 2rem;
-    --font-size-500: 1.75rem;
-    --font-size-400: 1.125rem;
+    --font-size-600: 1.75rem;
+    --font-size-500: 1.25rem;
+    --font-size-400: 1rem;
     --font-size-300: 1rem;
-    --font-size-200: 0.875rem;
-    --font-size-100: 0.75rem;
+    --font-size-200: 0.9375rem;
+    --font-size-100: 0.875rem;
 
-      /* Spacing */
+    /* Spacing */
     --gap: 1rem;
     --flow-space: 1rem;
+    --text-box-gap: 1rem;
+}
+
+@media (min-width: 45em) {
+    :root {
+        --font-size-900: 7.25rem;
+        --font-size-800: 6.25rem;
+        --font-size-700: 3.5rem;
+        --font-size-600: 1.75rem;
+        --font-size-500: 1.75rem;
+        --font-size-400: 1.125rem;
+        --font-size-300: 1rem;
+        --font-size-200: 0.9375rem;
+        --font-size-100: 0.875rem;
+    }
+}
+
+@media (min-width: 65em) {
+    :root {
+        --font-size-900: 9.375rem;
+    }
 }
 
 /* Resets */
@@ -55,6 +76,9 @@ h1, h2, h3, h4, h5, h6, p {
     font-weight: 400;
 }
 
+html {
+    overflow-x: hidden;
+}
 
 /* Setting up body*/
 body {
@@ -62,21 +86,19 @@ body {
     font-size: var(--font-size-400);
     min-height: 100vh;
     line-height: 1.5;
-    background-image: url('../Images/Home/background-home-desktop.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     color: hsl(var(--clr-light));
-    display: grid;
-    grid-template-rows: min-content 1fr;
 }
+
+
 
 /**************/
 /*   Header   */
 /**************/
-
 .primary-header {
-    padding: 2.5rem 0 2.5rem 2.5rem;
+    padding: 2rem 1.75rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -84,16 +106,24 @@ body {
 }
 
 .main-nav {
-    padding: 0 10rem;
-    backdrop-filter: blur(20px);
-}
+    position: fixed;
+    inset: 0 0 0 25%;
+    background-color: hsl(var(--clr-white) / 0.05);
+    backdrop-filter: blur(1.5rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+   /*Hiding Navigation */
+    opacity: 0;
+
+}
 
 .main-nav-list {
     display: flex;
-    gap: 3.5rem;
+    flex-direction: column;
+    gap: 0.5rem;
     list-style: none;
-    align-items: center;
 }
 
 .main-nav-link {
@@ -108,27 +138,359 @@ body {
     transition: all 0.3s ease;
 }
 
-.main-nav-link::before {
+.main-nav .number {
+    font-size: var(--font-size-400);
+    font-weight: 700;
+    margin-right: 0.5rem ;
+}
+
+.close-button {
+    display: none;
+}
+
+.menu-button,
+.close-button {
+    background: transparent;
+    border: none;
+    position: relative;
+    z-index: 999;
+}
+
+.nav-icon {
+    height: 1.25rem
+}
+
+/* When the navigation is open */
+.navigation-open .main-nav {
+    opacity: 1;
+    z-index: 10;
+}
+.navigation-open .close-button {
+    display: block;
+}
+
+.navigation-open .menu-button {
+    display: none;
+}
+
+
+@media(min-width: 45em) {
+    .primary-header {
+        padding: 0;
+    }
+
+    .logo-container {
+        padding: 0 1.75rem;
+    }
+
+    .number {
+        display: none;
+    }
+
+    .mobile-navigation {
+        display: none;
+    }
+
+    .main-nav {
+        position: static;
+        display: block;
+        opacity: 1;
+        padding: 0 3rem;
+    }
+
+    .main-nav-list {
+        flex-direction: row;
+        gap: 1.75rem;
+    }
+
+    .main-nav-link {
+        display: block;
+        color: hsl(var(--clr-white));
+        font-size: var(--font-size-400);
+        font-family: var(--font-family-barlow-condensed);
+        text-decoration: none;
+        text-transform: uppercase;
+        position: relative;
+        padding: 2.25rem 0;
+        transition: all 0.3s ease;
+    }
+
+    .main-nav-link::before {
+        content: '';
+        position: absolute;
+        width: 0;
+        bottom: 0;
+        left: 0;
+        border-bottom: 0.2rem solid hsl(var(--clr-white) / 0.6);
+    }
+
+    .main-nav-link:hover::before,
+    .main-nav-link:focus::before {
+        animation: border-animation 0.8s linear forwards;
+    }
+
+    .main-nav-link.active::before {
+        border-bottom: 0.2rem solid hsl(var(--clr-white));
+        animation: none !important;
+        width: 100%;
+    }
+
+    @keyframes border-animation {
+        0% {
+            width: 0;
+        }
+
+        100% {
+            width: 100%;
+        }
+    }
+}
+
+
+@media (min-width: 55em) {
+    .primary-header {
+        padding: 2rem 0 2rem 2rem;
+        overflow: hidden;
+    }
+
+    .main-nav {
+        padding-inline: 4rem;
+    }
+
+    .main-nav-list {
+        gap: 3rem;
+    }
+
+    .logo-container {
+        padding: 0;
+    }
+
+    .number {
+        display: inline;
+    }
+}
+
+@media (min-width: 65em) {
+    .main-nav {
+        padding-inline: 8rem;
+    }
+}
+
+/* Pages background images*/
+
+.home {
+    background-image: url('../Images/Home/background-home-mobile.jpg');
+}
+
+.destination    {
+    background-image: url(../Images/Destination/background-destination-mobile.jpg);
+}
+
+@media (min-width: 35em) {
+    .home {
+        background-image: url('../Images/Home/background-home-tablet.jpg');
+    }
+
+    .destination    {
+        background-image: url(../Images/Destination/background-destination-tablet.jpg);
+    }
+}
+
+@media (min-width: 45em) {
+    .home {
+        background-image: url('../Images/Home/background-home-desktop.jpg');
+    }
+
+    .destination    {
+        background-image: url(../Images/Destination/background-destination-desktop.jpg);
+    }
+}
+
+/*********************/
+/*   Hero Section   */
+/********************/
+
+/***********************/
+/*   Home Page  */
+/***********************/
+
+.hero-section {
+    padding: 2rem 0;
+}
+
+
+.grid-container {
+    padding-inline: 2rem;
+    display: grid;
+    max-width: 80rem;
+    margin-inline: auto;
+    gap: 4.5rem;
+    min-height: 70vh;
+    place-items: center;
+}
+
+.text-box {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero-section-text {
+    line-height: 1.6;
+}
+
+.space {
+    font-family: var(--font-family-bellefair);
+    font-size: var(--font-size-900);
+    text-align: center;
+    display: block;
+}
+
+.button-box {
+    justify-self: center;
+}
+
+.large-button {
+    position: relative;
+    display: inline-grid;
+    z-index: 1;
+    place-items: center;
+    text-decoration: none;
+    border-radius: 50%;
+    cursor: pointer;
+    aspect-ratio: 1;
+    padding: 3rem;
+}
+
+.large-button::after {
     content: '';
     position: absolute;
-    width: 0;
-    bottom: 0;
-    left: 0;
-    border-bottom: 0.2rem solid hsl(var(--clr-white) / 0.6);
-}
-
-.main-nav-link:hover::before,
-.main-nav-link:focus::before{
-    animation: border-animation 0.8s linear forwards;
-}
-
-.main-nav-link.active::before {
-    border-bottom: 0.2rem solid hsl(var(--clr-white));
-    animation: none !important;
     width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: hsl(var(--clr-white) / 0.15  );
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
 }
 
-@keyframes border-animation {
+.large-button:hover::after,
+.large-button:focus::after{
+    transform: scale(1.5);
+    opacity: 1;
+}
+
+@media (min-width: 45rem) {
+    .grid-container {
+        grid-template-columns: 1fr 1fr;
+        justify-content: end;
+    }
+
+    .button-box {
+        justify-self: end;
+    }
+
+    .text-box {
+        text-align: left;
+    }
+
+    .space {
+        text-align: left;
+    }
+
+    .large-button {
+        padding: 4rem;
+    }
+
+}
+
+/***********************/
+/*   Destination Page  */
+/***********************/
+.destination-grid-container {
+    max-width: 80rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-inline: auto;
+    padding-inline: 1.5rem;
+    min-height: 70vh;
+    place-items: center;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    position: relative;
+}
+
+.numbered-heading {
+    font-family: var(--font-family-barlow);
+    font-size: var(--font-size-500);
+    text-transform: uppercase;
+    color: var(--clr-white);
+    text-align: center;
+}
+
+.planet-container {
+    display: flex;
+    justify-content: center;
+}
+
+.planet-image {
+    max-width: 80%;
+    animation: spinning 120s infinite linear forwards;
+
+}
+
+@keyframes spinning {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* Secondary Navigation */
+.secondary-nav {
+    margin-bottom: 0.75rem;
+}
+
+.secondary-nav-list {
+    list-style: none;
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+}
+
+.secondary-nav-link {
+    display: block;
+    color: hsl(var(--clr-light));
+    font-size: var(--font-size-400);
+    font-family: var(--font-family-barlow-condensed);
+    text-decoration: none;
+    text-transform: uppercase;
+    position: relative;
+    padding: 0.5rem 0;
+    transition: all 0.4s ease;
+}
+
+.secondary-nav-link::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    border-bottom: 3px solid hsl(var(--clr-white));
+}
+
+.secondary-nav-link:hover {
+    color: hsl(var(--clr-white));
+}
+
+.secondary-nav-link:hover::before {
+    animation: border-animation-secondary 0.8s linear forwards;
+}
+
+@keyframes border-animation-secondary {
     0% {
         width: 0;
     }
@@ -138,37 +500,88 @@ body {
     }
 }
 
-.number {
-    font-size: var(--font-size-400);
-    font-weight: 700;
-    margin-right: 0.75rem;
+.destination-planet {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
 }
 
-/*********************/
-/*   Hero Section   */
-/********************/
-
-.grid-container {
-    padding-inline: 2rem;
-    display: grid;
-    max-width: 80rem;
-    margin-inline: auto;
-    gap: 1rem;
-    border: 1px solid red;
+.horizontal-line {
+    height: 1.25px;
+    margin: 1rem 0;
+    width: 90%;
+    background-color: hsl(var(--clr-light) / 0.3);
 }
 
-@media (min-width: 45rem) {
-    .grid-container {
+
+.distance-text,
+.days-text {
+    font-family: var(--font-family-bellefair);
+    font-size: var(--font-size-600);
+    color: hsl(var(--clr-white));
+    text-transform: uppercase;
+}
+
+.distance-label,
+.time-label {
+    font-size: var(--font-size-100);
+    text-transform: uppercase;
+}
+
+.planet-details {
+    grid-template-columns: 1fr;
+}
+
+
+@media (min-width: 35em) {
+    .planet-details {
         grid-template-columns: 1fr 1fr;
     }
 
-    .main-nav {
-        display: none;
+    .destination-planet {
+        padding: 0 3rem;
     }
 }
 
+@media (min-width: 45em) {
+    .destination-grid-container {
+        grid-template-columns: 1fr 1fr;
+    }
 
+    .destination-planet {
+        padding: 0;
+    }
 
+    .numbered-heading-container {
+        justify-self: left;
+    }
+
+    .numbered-heading-container {
+        grid-column: span 2;
+    }
+
+    .secondary-nav-list {
+        list-style: none;
+        display: flex;
+        gap: 1.75rem;
+        justify-content: left;
+    }
+
+    .planet-image {
+        max-width: 92%;
+    }
+
+    .destination-moon {
+        text-align: left;
+    }
+}
+
+@media (min-width: 65em) {
+    .planet-image {
+        max-width: 100%;
+    }
+}
 
 
 
